--- a/vista1.html
+++ b/vista1.html
@@ -112,7 +112,7 @@
                                         <h4 class="card-title"> <b> Costillas</b></h4>
                                         <p class="card-text">Deléitate con el sabor de nuestras costillas bañadas en una variedad de salsas con una buena porción de papas y gaseosa</p>
                                         <br>
-                                        <a href="vista2.html" type="button" class="btn btn-outline-warning"> <b>Haz tú pedido ya</b> </a>
+                                        <a href="Productos.html" type="button" class="btn btn-outline-warning"> <b>Haz tú pedido ya</b> </a>
                                         <ul class="list-inline">
                                             <li class="list-inline-item">
                                                 <a class="social-icon text-xs-center" target="_blank" href="https://www.fiverr.com/share/qb8D02">
@@ -161,7 +161,7 @@
                                         <h4 class="card-title"> <b>Waffles</b> </h4>
                                         <p class="card-text">Anímate a probar nuestros deliciosos waffles, No olvides que tenemos waffles salados y dulces para todos los gustos</p>
                                         <br>
-                                        <a href="vista2.html" type="button" class="btn btn-outline-warning"> <b>Haz tú pedido ya</b> </a>
+                                        <a href="Productos.html" type="button" class="btn btn-outline-warning"> <b>Haz tú pedido ya</b> </a>
                                         <ul class="list-inline">
                                             <li class="list-inline-item">
                                                 <a class="social-icon text-xs-center" target="_blank" href="https://www.fiverr.com/share/qb8D02">
@@ -210,7 +210,7 @@
                                         <h4 class="card-title"> <b> Entradas</b></h4>
                                         <p class="card-text">Y qué tal si mientras, esperas que preparemos tu pedido, pruebas de alguna de nuestras deliciosas entradas, con una deliciosa variedad de productos.</p>
                                         <br>
-                                        <a href="vista2.html" type="button" class="btn btn-outline-warning"> <b>Haz tú pedido ya</b> </a>
+                                        <a href="Productos.html" type="button" class="btn btn-outline-warning"> <b>Haz tú pedido ya</b> </a>
                                         <ul class="list-inline">
                                             <li class="list-inline-item">
                                                 <a class="social-icon text-xs-center" target="_blank" href="https://www.fiverr.com/share/qb8D02">
@@ -259,7 +259,7 @@
                                         <h4 class="card-title"> <b> Bebidas</b></h4>
                                         <p class="card-text">En Flutters contamos con una amplia variedad de bebidas desde bebidas frías, calientes, limonadas, hasta licores, contamos con una variedad de cócteles.</p>
                                         <br>
-                                        <a href="vista2.html" type="button" class="btn btn-outline-warning"> <b>Haz tú pedido ya</b> </a>
+                                        <a href="Productos.html" type="button" class="btn btn-outline-warning"> <b>Haz tú pedido ya</b> </a>
                                         <ul class="list-inline">
                                             <li class="list-inline-item">
                                                 <a class="social-icon text-xs-center" target="_blank" href="https://www.fiverr.com/share/qb8D02">
@@ -308,7 +308,7 @@
                                         <h4 class="card-title"> <b> Malteadas</b></h4>
                                         <p class="card-text">También contamos con unas deliciosas malteadas con una amplia variedad de ricos dulces. </p>
                                         <br>
-                                        <a href="vista2.html" type="button" class="btn btn-outline-warning"> <b>Haz tú pedido ya</b> </a>
+                                        <a href="Productos.html" type="button" class="btn btn-outline-warning"> <b>Haz tú pedido ya</b> </a>
                                         <ul class="list-inline">
                                             <li class="list-inline-item">
                                                 <a class="social-icon text-xs-center" target="_blank" href="https://www.fiverr.com/share/qb8D02">
